--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,16 @@
 
 {% load static from staticfiles %}
 
+
+{% if messages %}
+  <ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+    {% endfor %}
+  </ul>
+  {% endif %}  
   
+
 {% include "include/jumbo_include.html" %}
 
    
