--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -10,7 +10,7 @@
 		<div class ='container'>
 			<div class='jumbotron'>
 				<h3>Квадратное уравнеие: a*x*x + b*x + c = 0</h3>
-				<form method="GET">
+				<form method="get">
 					{{ form.as_p }}
 					<input type="submit" value="Решить"/>
 				</form>
