--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -47,7 +47,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="{% url 'index' %}">Main</a></li>
             <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'student_list' %}">Students</a></li>
+            <li><a href="{% url 'students:list' %}">Students</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -58,92 +58,90 @@
       <div class="starter-template">
         <h2 class="starter-template">{{ course.name }}</h2>
         <h2 class="starter-template">{{ course.description }}</h2>
-
-    <ul>
-    {% for lesson in lessons_list %}
-        <li>{{ lesson.subject }}</li>
-    {% endfor %}
-    </ul>
-
-    <p>No lessons are available.</p>
-
-
-
       </div>
 
 
-
+    <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Information about course lessons</div>
+      {% if lessons_list %}
       <!-- Table -->
-      <table class="table table-bordered">
-      <tbody>
-      <tr>
-      <td>Surname</td>
-      <td>Gubkina</td>
-      </tr>
-      <tr>
-      <td>Name</td>
-      <td>Anna</td>
-      </tr>
-      <tr>
-      <td>Patronymic</td>
-      <td>Sergeevna</td>
-      </tr>
-      <tr>
-      <td>Birth Date</td>
-      <td>15 February 1980</td>
-      </tr>
-      <tr>
-      <td>Address</td>
-      <td>Kharkov, Ivanova, 1</td>
-      </tr>
-      <tr>
-      <td>E-mail</td>
-      <td>agubkina@gmail.com</td>
-      </tr>
-      <tr>
-      <td>Skype</td>
-      <td>a_gubkina</td>
-      </tr>
-      <tr>
-      <td>Average Grade</td>
-      <td>4.8</td>
-      </tr>
-      <tr>
-      <td>Rating</td>
-      <td>35</td>
-      </tr>
-      </tbody>
-      </table>
+        <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+        <th>#</th>
+        <th>Lesson Subject</th>
+        <th>Lesson Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for lesson in lessons_list %}
+        <tr>
+        <td>{{ lesson.id }}</td>
+        <td>{{ lesson.subject }}</td>
+        <td>{{ lesson.description }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+        </table>
+      {% else %}
+        <p>No lessons are available.</p>
+      {% endif %}
+
+    </div>
 
     <div class="panel panel-default">
       <!-- Default panel contents -->
-      <div class="panel-heading">Information about tests and practical lessons execution</div>
-
+      <div class="panel-heading">Information about course coaches</div>
+      {% if coaches_list %}
       <!-- Table -->
-      <table class="table table-striped table-bordered">
-      <thead>
-      <tr>
-      <th>Theme</th>
-      <th>Week Number</th>
-      <th>Control Type</th>
-      <th>Problem Task Number</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-      <td>Python for Beginners</td>
-      <td>1</td>
-      <td>Practice Lesson</td>
-      <td>Problem Task #2</td>
-      </tr>
-      <tr>
-      <td>Handling Exceptions</td>
-      <td>2</td>
-      <td>Tests</td>
-      <td>Problem Task #1</td>
-      </tr>
-      </tbody>
-      </table>
+        <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+        <th>Coach Full Name</th>
+        <th>Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for coach in coaches_list %}
+        <tr>
+        <td>{{ coach.first_name }} {{ coach.last_name }}</td>
+        <td>{{ coach.description }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+        </table>
+      {% else %}
+        <p>No coaches are available.</p>
+      {% endif %}
+
+    </div>
+
+    <div class="panel panel-default">
+      <!-- Default panel contents -->
+      <div class="panel-heading">Information about course assistants</div>
+      {% if assistants_list %}
+      <!-- Table -->
+        <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+        <th>Assistant Full Name</th>
+        <th>Description</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for assistant in assistants_list %}
+        <tr>
+        <td>{{ assistant.first_name }} {{ assistant.last_name }}</td>
+        <td>{{ assistant.description }}</td>
+        </tr>
+        {% endfor %}
+        </tbody>
+        </table>
+      {% else %}
+        <p>No assistants are available.</p>
+      {% endif %}
+
     </div>
 
       <footer>
