--- a/templates/courses/add.html
+++ b/templates/courses/add.html
@@ -17,7 +17,7 @@
 
   <h2>Создание нового курса</h2>
   <br>
-  <form method='POST'>
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Создать">
