--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -6,22 +6,19 @@
 </head>
 <body>
     <h2>Квадратное уравнение a*x*x + b*x + c = 0</h2>
-    <form>
+    <form method="GET">
         {{ form.as_p }}
         <input type="submit" value="Решить">
     </form>
-
     {% if dscrt != None %}
         <h4>Дискриминант:{{ dscrt }}</h4>
         {% if dscrt > 0 %}
-            <h4>Квадратное уравнение имеет два действительных корня: x1 ={{ x1 }}, x2 ={{ x2 }}</h4>
+            <h4>Квадратное уравнение имеет два действительных корня: x1 = {{ x1 }}, x2 = {{ x2 }}</h4>
         {% elif dscrt == 0 %}
-            <h4>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 ={{ x1 }}</h4>
+            <h4>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ x1 }}</h4>
         {% elif dscrt < 0 %}
             <h4>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</h4>
         {% endif %}
     {% endif %}
-
-
 </body>
 </html>
