--- a/templates/students/edit.html
+++ b/templates/students/edit.html
@@ -5,7 +5,7 @@
         <h2 class="center">Редактирование данных студента</h2>
     </div>
 {% include 'include/message_include.html' %}
-<form method="post">
+<form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Изменить">
