--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,18 @@
 
 {% block content %}
     <div class="col-lg-12">
+        {% if messages %}
+            <div class="alert alert-info alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                {% for message in messages %} {{ message }} {% endfor %}
+            </div>
+        {% endif %}
         <div class="well">
             <h1>Bursa</h1>
             <p>Данное направление позволяет освоить одну из самых популярных специальностей в IT-индустрии – программист. Немаловажным фактором является то, что слушателям предоставляется возможность ознакомиться с разными направлениями в программировании и выбрать для себя наиболее подходящий вариант. В программу курса включаются все аспекты программирования – начиная от основ алгоритмизации и заканчивая новейшими инструментариями используемыми в современной индустрии. Также в курс включаются предметы выходящие за рамки программирования, где слушатели знакомятся с основами проектирования, построением сложных систем и управлением программными проектами.</p>
         </div>
         <h2>Program</h2>
+        <a href="{% url 'courses:add' %}" class="btn btn-info">Создать новые курсы</a>
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
@@ -28,6 +35,8 @@
                 <tr>
                     <td><a href="{% url 'courses:detail' course.id %}">{{ course.name|upper }}</a></td>
                     <td>{{ course.short_description|title }}</td>
+                    <td><a href="{% url 'courses:edit' course.id %}" class="btn btn-info">Изменить</a></td>
+                    <td><a href="{% url 'courses:remove' course.id %}" class="btn btn-info">Удалить</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
