--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Квадратное уравнение a*x*x + b*x + c = 0</h2>
-    <form method="GET">
+    <form method="get">
         {{ form.as_p }}
         <input type="submit" value="Решить">
     </form>
