--- a/templates/students/delete.html
+++ b/templates/students/delete.html
@@ -2,7 +2,7 @@
 {% block title %}Delete{% endblock %}
 {% block content %}
 <h2 class="center">Студент {{ student.fullname }} будет удален</h2>
-<form method="POST">
+<form method="post">
     {% csrf_token %}
     <input type="submit" value="Удалить">
 </form>
