--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -31,7 +31,7 @@
                 </td>
                 <td>
                     <a href="{% url 'students:edit' student.id %}">Изменить</a>
-                    <a href="{% url 'students:delete' student.id %}">Удалить</a>
+                    <a href="{% url 'students:remove' student.id %}">Удалить</a>
                 </td>
 
             </tr>
