--- a/templates/include/show_message.html
+++ b/templates/include/show_message.html
@@ -1,4 +1,4 @@
 <div class="alert alert-success alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>{{ display_text }} {{ edit_message }}</strong> 
+  <strong>{{ show_message }}</strong> 
 </div>
