--- a/templates/students/edit.html
+++ b/templates/students/edit.html
@@ -5,12 +5,9 @@
 {% block nav-class-students %}active{% endblock nav-class-students %}
 
 {% block content %}
-	{% if message %}
-	    <div class="alert alert-{% if message.tags %}{{ message.tags }}{% else %}info{% endif %} alert-dismissible" role="alert">
-			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		{{ message }}
-	    </div>
-	{% endif %}
+    {% if message %}
+      {% include "include/show_message.html" with show_message=message %}
+    {% endif %}
 		<form method="post">
 			{% csrf_token %}
 			{{ form.as_p}}
