--- a/templates/students/edit.html
+++ b/templates/students/edit.html
@@ -8,7 +8,7 @@
     {% if message %}
       {% include "include/show_message.html" with show_message=message %}
     {% endif %}
-		<form method="post">
+		<form method="POST">
 			{% csrf_token %}
 			{{ form.as_p}}
 			<input type="submit" value="Save info" />
