--- a/templates/students/remove.html
+++ b/templates/students/remove.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <p>{{ student.name }} {{ student.surname }} will be removed </p>
-<form method='post'>
+<form method='POST'>
 	{% csrf_token %}
 	<input type="submit" value="Delete student"/>
 </form>
