--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -22,7 +22,7 @@
   </head>
   <body>
   <h1>Квадратное уравнение a*x*x + b*x + c = 0</h1>
-    <form method = "GET">
+    <form method = "get">
     {{ form.as_p}}
       <input type = "submit" value = "Решить"/>
     </form> <br />
