Edited files KR7

--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -6,8 +6,7 @@
 
 {% block content %}
   <div class="container">
-      <h1> Quadratic </h1>
-        <div> Calculating ax<sup>2</sup> + bx + c = 0</div>
+        <div> Квадратное уравнение ax<sup>2</sup> + bx + c = 0</div>
         <br>
         <form method="get">
             {{ form.as_p }}
@@ -26,9 +25,6 @@
                 Дискриминант: {{ D }} <br>
                 Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений. <br>
         <br>
-                P.S.  А на самом деле решение есть: <br>
-                x<sub>1</sub> = {{ x1 }} <br>
-                x<sub>2</sub> = {{ x2 }} <br>                
             {% endif %}
         {% endif %}
     </div>
