--- a/templates/include/course_include.html
+++ b/templates/include/course_include.html
@@ -1,2 +1,1 @@
-<h1>{{ course }}</h1>
-<h2>{{ course.description|truncatechars:32 }}</h2>
+<p>This list provides extra references and information for students.</p>
