--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -13,7 +13,7 @@
     <!-- Default panel contents -->
     <div class="panel-heading">Students of ITBursa-2015</div>
     <div class="panel-body">
-      <p>This list provides extra references and information for students.</p>
+      {% include "include/course_include.html" %}
     <h2> Student's list: </h2>
     <br>
       <div class="table-responsive">
