Project structure remastered

--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -55,5 +55,5 @@
     </table>
     </div>
   </div>
-{% include 'students/include/banner.html'%}
+{% include 'include/banner_include.html'%}
 {% endblock content %}
