--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -44,5 +44,5 @@
     </table>
     </div>
   </div>
-{% include "students/include/banner.html" %}
+{% include "include/banner_include.html" %}
 {% endblock content %}
