--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,11 +1,4 @@
-{% extends 'base.html' %}
-
-
-{% block title %}Quadratic{% endblock title %}
-
-
-{% block content %}
-  <div class="container">
+<h1> Quadratic </h1>
         <div> Квадратное уравнение ax<sup>2</sup> + bx + c = 0</div>
         <br>
         <form method="get">
@@ -27,5 +20,4 @@
         <br>
             {% endif %}
         {% endif %}
-    </div>
-{% endblock content %}
+   
