--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 		<title>{% block title %}{% endblock title %}</title>
 	</head>
 	<body>
-  		<nav class="navbar navbar-inverse navbar-fixed-top">
+  		<nav class="row navbar-inner">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -27,6 +27,9 @@
       </nav>
 
 		<div class="container theme-showcase" role="main">
-{% block content %}{% endblock content %}
+      <div class="container">
+  {% block content %}{% endblock content %}
+      </div>
+      </div>
 	</body>
 </html>
