modified app courses

--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -34,7 +34,7 @@
 </div>
     <h2>План курса</h2>
     <div class="container" id="sto">
-	    <a class="btn btn-primary btn-lg" href="{% url 'courses:add-lesson' course.id %}" role="button"> + Добавить занятие</a></p>
+	    <a class="btn btn-primary btn-lg" href="{% url 'courses:add_lesson' course.id %}" role="button"> + Добавить занятие</a></p>
 	</div>
     <table class="table table-hover">
         	<tr>
