--- a/courses/templates/courses/courses/detail.html
+++ b/courses/templates/courses/courses/detail.html
@@ -29,15 +29,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
+      <a class="navbar-brand" ></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="{% url 'index' %}">Main <span class="sr-only">(current)</span></a></li>
-<li><a href="{% url 'contact' %}">Contacts</a></li>
-<li><a href="{% url 'student_list' %}">Students</a></li>        
+        <li class="active"><a href=/>Главная <span class="sr-only">(current)</span></a></li>
+<li><a href="{% url 'contact' %}">Контакты</a></li>
+<li><a href="{% url 'students:student_list' %}">Студенты</a></li>        
           </ul>
         </li>
       </ul>
@@ -50,15 +50,22 @@
 
 <div class="container">
 <div class="jumbotron">
-  <h1>Description</h1>
-  <p>We can help you get out of this vicious circle and like a river, to perform a real project
-right on course.
-Immediately after the end of the course, there is nothing else, you will be able to demonstrate this potential project
-employer and dark at night, tell about the technology, as a rule, you use it..</p>
-  <h1>Program</h1>
-  <p>1 Fundamentals of Python</p>
-  <p>2 Basics of html / css</p>
-  <p>3 Django</p> 
+  <h2 class="starter-template">{{ course.name }}</h2> 
+        <h2 class="starter-template">{{ course.description }}</h2>
+  
+  <h2>План курса</h2>
+  <table class="table">
+  <TR>
+                <TD>#</TD> <TD>Тема</TD> <TD>Описание</TD> 
+        </TR>
+             
+{% for lesson in course.lesson_set.all %}
+        <TR>
+                <TD>{{ lesson.order }}</TD>   <TD><li>{{ lesson.subject }}</li></TD> <TD>{{ lesson.description }}</TD> 
+        </TR>{% endfor %}
+                
+</table>
+
 </div>
 </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
