--- a/courses/templates/courses/index.html
+++ b/courses/templates/courses/index.html
@@ -29,15 +29,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'index' %}">PyBursa</a>
+      <a class="navbar-brand" href=/>PyBursa</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'index' %}">Main</a></li>
-        <li><a href="{% url 'contact' %}">Contacts</a></li>
-        <li class="active"><a href="{% url 'students:student_list' %}">Students <span class="sr-only">(current)</span></a></li>        
+        <li class="active"><a href=/>Главная <span class="sr-only">(current)</span></a></li>
+<li><a href="{% url 'contact' %}">Контакты</a></li>
+<li><a href="{% url 'students:student_list' %}">Студенты</a></li>        
           </ul>
         </li>
       </ul>
@@ -50,17 +50,20 @@
 
 <div class="container">
 <div class="jumbotron">
-  <h1>Курс PyBursa</h1>
-  <p>Ниже представлен список студентов:</p>
+  <h1>ooniversity</h1>
+  <p>Мы специализируемся на "модных" языках программирования. Принципиальное наше отличие от других курсов - максимум практики и жесткая система обязательных домашних заданий.</p>
+  <h1>Выбирай на каком курсе ты хочешь учиться!</h1>
   <table class="table">
   <TR>
-                <TD>No</TD> <TD>Surname</TD> <TD>Name</TD> <TD>Address</TD> <TD>Skype</TD>
-        </TR>{% for student in students %}
+                <TD>Курс</TD> <TD>Описание</TD> 
+        </TR>{% for course in courses %}
         <TR>
-                <TD><li><a href="{% url 'courses:detail' course.id %}">{{ student.id }}</a></li></TD> <TD>{{ student.surname }}</TD> <TD>{{ student.name }}</TD> <TD>{{ student.address }}</TD> <TD>{{ student.skype }}</TD>
+                <TD><li><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></li></TD> <TD>{{ course.description }}</TD> 
         </TR>{% endfor %}
-        
+               
 </table> 
+    
+
 </div>
 </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
