--- a/courses/templates/courses/detail.html
+++ b/courses/templates/courses/detail.html
@@ -24,6 +24,14 @@
 
       <p class="text">{{ course.description }}</p>
 
+      <h2 class="header">Teachers</h2>
+      <h3>Coach</h3>
+        <p><b><a href="{% url 'coaches:detail' coach.id %}">{{ coach.user.first_name }} {{ coach.user.last_name }}</a></b></p>
+
+        <p>{{ coach.description }}</p>
+      <h3>Assistant</h3>
+      <p><b><a href="{% url 'coaches:detail' coach.id %}">{{ assistant.user.first_name }} {{ assistant.user.last_name }}</a></b></p>
+        <p>{{ assistant.description }}</p>
       <h2 class="header">Lessons</h2>
       <table class="border">
         <tbody>
