--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
 
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{%static 'jquery.min.js' %}"></script>
+    <script src="{%static 'js/jquery.min.js' %}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static 'js/bootstrap.js' %}"></script>
   </body>
