--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
       <tbody>
           {% for item in courses %}
           <tr>
-          <td><a href="{% url 'courses:detail' pk=item.id %}">{{ item.name|upper }}</a></td>
+          <td><a href="{% url 'courses:detail' pk=item.id %}">{{ item|upper }}</a></td>
           <td>{{ item.short_description|title }}</td>
           </tr> 
           {% endfor %}
