--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -24,16 +24,16 @@
     <input type='submit' value="Решить" />
   </form> 
  
- {% if dic.d or dic.d == 0 %}
-{% if dic.d > 0 %}
-<h3>Дискриминант: {{ dic.d }}</h3>
-<p>Квадратное уравнение имеет два действительных корня: x1 = {{ dic.x1 }}, x2 = {{ dic.x2 }}</p>
-{% elif dic.d == 0 %}
+{% if dic.d or dic.d == 0 %} 
+{% if dic.d == 0 %}
 <h3>Дискриминант: {{ dic.d }}</h3>
 <p>Дискриминант равен нулю, квадратное уравнение имеет один действительный корень: x1 = x2 = {{ dic.x1 }}</p>
 {% elif 0 > dic.d %}
 <h3>Дискриминант: {{ dic.d }}</h3>
 <p>Дискриминант меньше нуля, квадратное уравнение не имеет действительных решений.</p>
+{% elif dic.d > 0 %}
+<h3>Дискриминант: {{ dic.d }}</h3>
+<p>Квадратное уравнение имеет два действительных корня: x1 = {{ dic.x1 }}, x2 = {{ dic.x2 }}</p>
 {% endif %}
 {% endif %}
 </div>
