--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,10 @@ body {
 	font-size: 45%;
 }
 
+#id11 {background-color: rgba(255, 255, 255, 0.85);
+			color: rgb(40,40,40);
+}
+
 #id1 {background-color: rgba(255, 255, 102, 0.9);
 			color: rgb(40,40,40);
       font-size: 50%;
