--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -1,50 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{my_coach.first_name}} {{my_coach.last_name}} details</title>
-    {% load staticfiles %}
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <script src="{% static 'js/bootstrap.js' %}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  </head>
-  <body>
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <img src="{% static 'images/python.png' %}" class="navbar-logo">
-        </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'index' %}">Main</a></li>
-            <li><a href="{% url 'contact' %}">Contacts</a></li>
-            <li><a href="{% url 'students:list_view' %}">Students</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container-fluid -->
-    </nav>
+{% extends "base.html" %}
 
+
+{% block title %}{{my_coach.first_name}} {{my_coach.last_name}} details{% endblock title %}
+
+
+{% block nav_class_index %}active{% endblock %}
+
+
+{% block content %}
     <div class="container" id='id1'>
       <h1>{{my_coach.first_name}} {{my_coach.last_name}}</h1>
     </div>
-
     <div class="container" id='id1'>
-					<table class="table table-bordered">
-						<tbody>
+          <table class="table table-bordered">
+            <tbody>
               <tr>
                 <td>дата рождения</td>
-                <td>{{my_coach.date_of_birth}}</td>
+                <td>{{my_coach.date_of_birth|date:"j F, Y"}}</td>
               </tr>
               <tr>
                 <td>адрес</td>
@@ -85,10 +57,7 @@
                         </button><br>
                     {% endfor %}</td>
               </tr>
-						</tbody>
-					</table>
+            </tbody>
+          </table>
       </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-  </body>
-</html>
+{% endblock content %}
