--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}ItBursa student detail{% endblock %}
+{% block title %}ItBursa student detail{% endblock title %}
 
 
 {% block content %}
