--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,11 +3,11 @@
 {% load staticfiles %}
 
 
-{% block title %}ItBursa contacts{% endblock %}
+{% block title %}ItBursa contacts{% endblock title %}
 
 
 {% block navbar %}
-    {% include "inc_navbar.html" with active_page='contact' %}
+    {% include "include/navbar_include.html" with active_page='contact' %}
 {% endblock navbar %}
 
 
