--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}Course details{% endblock %}
+{% block title %}Course details{% endblock title %}
 
 
 {% block content %}
@@ -15,8 +15,8 @@
       <h2>Преподаватели</h2>
      </div>
      <div>
-        {% include "courses/inc_instructor.html" with status="Учитель" instructor=course.coach %}
-        {% include "courses/inc_instructor.html" with status="Ассистент" instructor=course.assistant %}
+        {% include "include/instructor_include.html" with status="Учитель" instructor=course.coach %}
+        {% include "include/instructor_include.html" with status="Ассистент" instructor=course.assistant %}
      </div>
         <table class="table table-bordered">
           <thead>
