--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -4,7 +4,7 @@
 {% load staticfiles %}
 
 
-{% block title %}ItBursa students{% endblock %}
+{% block title %}ItBursa students{% endblock title %}
 
 
 {% block content %}
