--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -15,6 +15,16 @@
   <div class="container theme-showcase" role="main">
     <div class="container">
       <div class="jumbotron">
+
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+        </ul>
+        {% endif %}
+
+        <p><a class="btn btn-primary btn-lg" href="{% url 'students:create' %}" role="button"><span class="glyphicon glyphicon-plus"></span> Добавить нового студента</a></p>
         <p>{{ course.description }}</p>
         <h2 class="course">Список студентов</h2>
         <div class="container">
@@ -29,6 +39,8 @@
             <th>Адрес</th>
             <th>Skype</th>
             <th>Курсы</th>
+            <th></th>
+            <th></th>
                       </tr>
                     </thead>
                     <tbody>
@@ -40,7 +52,8 @@
           <td>{{ i.address }}</td>
           <td>{{ i.skype }}</td>
           <td>{% for k in i.courses.all %}<a href="{% url 'courses:detail' k.id %}">{{ k.name }}</a><br>{% endfor %}</td>
-
+          <td><a class="btn btn-primary btn-block" href="{% url 'students:edit' i.id %}" role="button"><span class="glyphicon glyphicon-pencil"></span>Изменить</a></td>
+          <td><a class="btn btn-primary btn-block" href="{% url 'students:remove' i.id %}" role="button"><span class="glyphicon glyphicon-remove"></span>Удалить</a></td>
           </tr>
           {% endfor %}
 
