--- a/templates/index.html
+++ b/templates/index.html
@@ -4,3 +4,32 @@
 
 {% block title %}PyBursa: Main page{% endblock title%}
 
+{% block main_content %}
+      <div class="page-header">
+        <h1>Технополис</h1>
+      </div>
+      <p>Цель проекта — готовить квалифицированных веб-разработчиков и системных архитекторов.
+        Широкий спектр тем — от базовых, таких как алгоритмы и структуры данных, до тонкостей разработки приложений для мобильных платформ.
+      Такие проекты, как Technopolis, важны и для рынка в целом, и в первую очередь — для самих студентов. У молодых специалистов должна быть возможность общаться с экспертами отрасли, пробовать свои силы в реальных проектах, иметь перед глазами вдохновляющие примеры. Мы стремимся создавать площадки для этого: проводим конференции для it-разработчиков, организуем крупнейшую в стране олимпиаду для программистов Technopolis Cup и другие международные чемпионаты.</p>
+      <br>
+      <h2>Популярные курсы</h2>
+      <br>
+      <div class="table-responsive">
+        <table class="table table-hover table-condensed">
+          <thead>
+            <tr>
+              <th class="text-center">Курс</th>
+              <th class="text-center">Описание</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for course in courses %}
+              <tr>
+                <td><a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a></td>
+                <td>{{ course.short_description }}</td>
+              </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+{% endblock main_content %}
