--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -1,21 +1,11 @@
+{% extends "base.html" %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-   
-    <title>results</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{% static 'css/bootstrap.min.css' %}"  rel="stylesheet">
- </head>
+{% block title %}PyBursa Quadratic{% endblock title %}
 
-<body>
+
+{% block content %}
+
 <div class="jumbotron">
   <h4>Квадратное уравнение a*x*x + b*x + c = 0</h4>
   <p></p>  
@@ -26,12 +16,8 @@
  
 {{ d }}
 <br>
-{{ mes }} 
+{{ mes}} 
      
 
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
-</html>
+{% endblock content %}
 ﻿
