--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -31,6 +31,8 @@
                     <th>Address</th>
                     <th>Skype</th>
                     <th>Course</th>
+                    <th></th>
+                    <th></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -44,7 +46,8 @@
                                   <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a><br>
                                 {% endfor %}
                             </td>
-                            <td><a href="{% url 'students:add' %}" class="btn btn-primary" role="button">Change</a></td>
+                            <td><a href="{% url 'students:edit' student.id %}" class="btn btn-primary">Change</a></td>
+                            <td><a href="{% url 'students:remove' student.id %}" class="btn btn-primary">Remove</a></td>
                         </tr>
                     {% empty %}
                           <h3>No students</h3>
