--- a/templates/students/detail.html
+++ b/templates/students/detail.html
@@ -1,7 +1,10 @@
-{% extends "students/base.html" %}
+{% extends "base.html" %}
 {% load staticfiles %}
 
 {% block title %}{{ student.name }} {{ student.surname }}{% endblock title %}
+
+
+{% block nav_class_students %}active{% endblock nav_class_students %}
 
 
 {% block content %}
