--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -11,6 +11,15 @@
 
 
 {% block content %}
+  {% if messages %}
+        <div class="alert alert-info alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            {% for message in messages %} {{ message }} {% endfor %}
+        </div>
+    {% endif %}
+  <div>
+    <button class="btn"><a href="{% url 'students:add' %}">Добавить нового студента</a></button>
+  </div>
   <div class="jumbotron">
     <div class="container">
       <h1>Список студентов</h1>
@@ -42,7 +51,12 @@
                 <p><a href="{% url 'courses:detail' course.id %}">{{ course }}</a></p>
             {% endfor %} 
         </td>
-        
+        <td>
+            <button class="btn"><a href="{% url 'students:edit' student.id %}">Изменить</a></button>
+        </td>
+        <td>
+            <button class="btn"><a href="{% url 'students:remove' student.id %}">Удалить</a></button>
+        </td>       
       </tr>
     {% endfor %}
     </tbody>
