--- a/quadratic/templates/quadratic/results.html
+++ b/quadratic/templates/quadratic/results.html
@@ -13,7 +13,7 @@
             <form method="get">
              <!--{% csrf_token %}-->
               {{ form.as_p }}
-              <input type="submit">
+              <input type="submit" value="Решить">
             </form>
           </ul>
           {{ d }}<br>
