--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,49 +1,17 @@
+{% extends "base.html" %}
+
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <title>JSBursa contact</title>
 
-    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+{% block title %}JSBursa contact{% endblock %}
 
-    </head>
-  <body>
 
-  <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
+{% block nav_class_contact %}active{% endblock %}
 
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          </button>
-        </div>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li>
-              <a href="{% url 'courses:list_view' %}">Main</a>
-            </li>
-
-            <li class="active">
-              <a href="{% url 'contact' %}">Contact</a>
-            </li>
-
-            <li>
-              <a href="{% url 'students:list_view' %}">Students</a>
-            </li>
-
-          </ul>
-        </div>
-    </div>
-  </nav>
+{% block content %}
+{% include "include/home_include.html" %}
 <div class="container">
 <div class="row">
     <div class="col-md-10 col-md-offset-1">
@@ -87,7 +55,4 @@
     </div>
   </div>
 </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="../static/js/bootstrap.js"></script>
-  </body>
-</html>
+{% endblock content %}
