--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -1,53 +1,18 @@
+{% extends "base.html" %}
+
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Pyniversity</title>
 
-        <link href="{% static 'css/style.css' %}" rel="stylesheet">
-        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+{% block title %}Pyniversity{% endblock %}
 
-  </head>
-  <body>
-        <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
 
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
+{% block link_students %}" {% url 'students:list_view' %}?course_id={{course_object.id}} "{% endblock %}
 
-        <div class="collapse navbar-collapse test2" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href=" {% url 'courses:list_view' %} ">Main</a>
-        </li>
 
-        <li>
-          <a href=" {% url 'contact' %} ">Contact</a>
-        </li>
-
-        <li>
-          <a href="{% url 'students:list_view' %}?course_id={{course_object.id}} ">Students</a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-      </ul>
-    </div>
-  </div>
-</nav>
-<div class="container">
-
+{% block content %}
       <h1 class="description">{{ course_object.name }} </h1>
-      <h2 class="course">{{ course_object.description }}</h2>
+      <h2 class="course">{{ course_object.description|truncatechars:32 }}</h2>
       <h3>Преподаватели</h3>
       <div class="panel panel-default">
         <div class="panel-heading">Учитель</div>
@@ -85,7 +50,4 @@
     </table>
   </div>
 </div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <script src="{% static 'courses/bootstrap.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
