--- a/templates/students/list.html
+++ b/templates/students/list.html
@@ -1,51 +1,16 @@
+{% extends "base.html" %}
+
+
 {% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Students</title>
 
-        <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
-        <link href="{% static 'css/style.css' %}" rel="stylesheet">
+{% block title %}Students{% endblock %}
 
-  </head>
-  <body>
-        <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
 
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
+{% block nav_class_student %}active{% endblock %}
 
-        <div class="collapse navbar-collapse test2" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li>
-          <a href="{% url 'courses:list_view' %}">Main</a>
-        </li>
 
-        <li>
-          <a href="{% url 'contact' %}">Contact</a>
-        </li>
-
-        <li class="active">
-          <a href="{% url 'students:list_view' %}">Students</a>
-        </li>
-
-      </ul>
-
-      <ul class="nav navbar-nav navbar-right">
-      </ul>
-    </div>
-  </div>
-</nav>
+{% block content %}
 <div class="container">
 
   <h2>Список студентов</h2>
@@ -78,7 +43,4 @@
       </tbody>
     </table>
 </div>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <script src="{% static 'courses/bootstrap.js' %}"></script>
-  </body>
-</html>
+{% endblock content %}
